--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>com.psg.projectobjectboard</groupId>
+            <artifactId>nucleus</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <!--Codigo recurso de Java es en version 13 tenemos que indicar a Maven -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -10,16 +17,7 @@
         <maven.compiler.target>13</maven.compiler.target>
     </properties>
 
-    <groupId>com.lacroix.lacroixnet</groupId>
+    <groupId>com.psg.projectobjetboard</groupId>
     <artifactId>consoleuserinterface</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.lacroix.lacroixnet</groupId>
-            <artifactId>nucleus</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
 </project>
